# travvy-mcp-server

mcp-servers/: .gitignore  COMPLETE_MODULARIZATION.md  Dockerfile  QUICK_START.md  README.md  TEST_RESULTS.md  UV_MIGRATION.md  client.py  cloudbuild.yaml  deploy.sh  env.example  flights.py  main.py  maps_server.py  mcp_config.json  pyproject.toml  requirements.txt  setup_and_run.md  simple_test.py  test_server.py  test_servers.py  train_server.py  trains.py
mcp-servers/src/travvy_mcp/: __init__.py  server.py
mcp-servers/src/travvy_mcp/tools/: __init__.py  accommodation.py  base.py  flights.py  trains.py  weather.py
mcp-servers/src/travvy_mcp/utils/: __init__.py  formatters.py
